@@ -16,6 +16,7 @@ var_dump(json_decode(";"));
 var_dump(json_decode("руссиш"));
 var_dump(json_decode("blah"));
 var_dump(json_decode(NULL));
+var_dump(json_decode('[1}'));
 var_dump(json_decode('{ "test": { "foo": "bar" } }'));
 var_dump(json_decode('{ "test": { "foo": "" } }'));
 var_dump(json_decode('{ "": { "foo": "" } }'));
@@ -37,6 +38,7 @@ string(3) "<?>"
 string(1) ";"
 string(12) "руссиш"
 string(4) "blah"
+NULL
 NULL
 object(stdClass)#1 (1) {
   ["test"]=>
